# AgentFlow

./: .gitignore  CONTRIBUTING.md  PR_DESCRIPTION.md  README.md  pyproject.toml
_PRD/: PRD.md
sandbox/: agentflow-20251104061536.yaml
src/agentflow/: cli.py  config.py  viewer.py
src/agentflow/adapters/: __init__.py  codex_cli.py
src/agentflow/cli/: __init__.py  entry.py  workflow.py
src/agentflow/viewer/: __init__.py  server.py
tests/unit/: test_cli.py
